Remove atributo capacidade da tabela Locais
